change the color scheme for the map

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "js/active_cases_map.vg.json";
+  var spec2 = "js/total_cases_map.vg.json";
   vegaEmbed('#covid19_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
