--- a/week9homework.html
+++ b/week9homework.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="https://github.com/rabbiTANG916/Ass2/blob/master/Week9%20Homework.png">
+        <img src="Week9 Homework.png">
 
     </body>
     
