--- a/week9homework.html
+++ b/week9homework.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8">
-    <head>
-        <title>COVID 19 TOTAL CASES IN THE WORLDWIDE</title>
-    </head>
+  <head>
+    <title>COVID 19 TOTAL CASES IN THE WORLDWIDE</title>
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.18.2"></script>
+  </head>
+  <body>
+    <div id="vis"></div>
 
-    <body>
-        <img src="Week9 Homework.png">
+    <script type="text/javascript">
+      var yourVlSpec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "title": "COVID-19 Total cases in the worldside",
+    "width":800,
+    "height": 600,
+    "data":{
+        "url": "https://raw.githubusercontent.com/KaneSec/vega_lite/main/3_choropleth_map/js/ne_110m_admin_0_countries.topojson",
+        "format":{"type": "topojson","feature": "ne_110m_admin_0_countries"}
+    },
+    "transform": [{
+        "lookup": "properties.NAME",
+        "from": {
+          "data": {
+            "url": "https://raw.githubusercontent.com/rabbiTANG916/Ass2/master/dataset/worldometer_data%EF%BC%881%EF%BC%89.csv"
+          },
+          "key": "Country",
+          "fields": ["TotalCases"]
+        }
+      },
+      {"calculate": "datum.TotalCases", "as": "TotalCases"}
+    ],
+    "projection": {
+      "type": "equirectangular"
+    },
+    "mark": {
+      "type": "geoshape"
+      },
+    "encoding": {
+      "color": {
+        "field": "TotalCases",
+        "type": "quantitative",
+        "scale": {"type": "linear","scheme":"orangered"}
+      },
+      "tooltip": [
+        {"field": "properties.NAME", "type": "nominal", "title": "Country"},
+        {"field": "TotalCases", "type": "quantitative"}
+      ]
+    }
 
-    </body>
-    
-
+};
+      vegaEmbed('#vis', yourVlSpec);
+    </script>
+  </body>
 </html>
