clean and add datasets

--- a/week9homework.html
+++ b/week9homework.html
@@ -10,6 +10,10 @@
     <div id="vis"></div>
 
     <script type="text/javascript">
+    // var url;
+    // url = window.location.href;
+    // alert(url);
+
       var yourVlSpec = {
     "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
     "title": "COVID-19 Total cases in the worldside",
