--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 id="FIT">FIT3179 Assignment 2</h1>
     <h2 id="Visualisation">COVID-19 Visualisation</h2>
     <div class="intro">
-      <p>The covid-19 has always been a popular topic of concern, as the number of cases and
+      <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">The covid-19 has always been a popular topic of concern, as the number of cases and
         deaths continued to rise, people are beginning to pay attention to this human-to-human
         transmission. Therefore, the action is to discover and present for the people who care
         about the global COVID-19 situation and the transmission rate trends.</p>
@@ -39,55 +39,69 @@
     </div>
 
     <div class="pure-map-text">
-      <p>This is the map which display the Worldwide Situation of total cases of COVID-19. The color luminance
+      <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">This is the map which display the Worldwide Situation of total cases of COVID-19. The color luminance
         represents
-        the severity of infection in a country’s population</p>
+        the severity of infection in a country’s population.</p>
+        <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">You can place your mouse over a particular area to see the number of total cases in that area.</p>
     </div>
     <br>
     <br>
 
     <div class="bubble_chart">
       <div class="left">
-        <h2 style="text-align: center;">COVID-19 bubble chart</h2>
-        <p style="text-align: center;">Bubble chart text here......here...here.</p>
+        <h3 style="text-align: center;">COVID-19 bubble chart</h3>
+        <p style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">This bubble chart shows the relationshiop among deaths cases,confirmed cases and
+          population. You can click on the legend to chooe the continent that you want to see or use the selection bar
+          at the bottom of the chart to filter the chart directly.</p>
         <div id="covid19_bubble"></div>
       </div>
     </div>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+
     <div class="wrap">
       <div class="leftchart">
-        <h2 style="text-align: center;margin-top: 0px;">COVID-19 Death Cases Top 10 Country</h2>
-        <p style="text-align: center;">covid19 death top 10 text text.........text.</p>
-        <div id="covid19_bar"></div>
+        <h3 style="text-align: center;margin-top: 0px;">COVID-19 Death Cases Top 10 Country</h3>
+        <p style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">The bar chart sorted the countries and colour luminance by difference of death
+          cases number with a mean death number line to give a clearly data overview. You can place your mouse over the
+          bar chart to see the specific number of cases.</p>
+        <div id="covid19_bar" style="margin-left: 100px;"></div>
       </div>
       <div class="rightchart">
-        <h2 style="text-align: center;">COVID-19 line trends Visualisation </h2>
-        <p style="text-align: center;">multiple line chart view text text text.</p>
+        <br>
+        <br>
+        <br>
+        <h3 style="text-align: center;">COVID-19 line trends Visualisation </h3>
+        <p style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">This visualisation combines the four attributes to represent different trends of
+          COVID-19. The multi-view line chart presents the different of trends and numbers regards four attributes from
+          the dataset in one visualisation so that the reader can realise how the number of deaths related to the active
+          cases, confirmed cases and recovered cases. This chart used a white stroke for different colour lines to avoid
+          layer's effect.</p>
         <div id="covid19_multiline"></div>
       </div>
     </div>
 
 
     <div class="pure-g">
-    <div class="pure-u-2-3" style="width:100%">
-      <h3 id="pie_title">COVID-19 in Australia</h3>
-      <div id="covid19_aus_pie"></div>
-      <p>text text text text</p>
+      <div class="pure-u-2-3" style="width:100%">
+        <h3 id="pie_title">COVID-19 in Australia</h3>
+        <div id="covid19_aus_pie"></div>
+        <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">The hconcat usage to show three different attributes, and the highlight click is used to discover
+          the number difference of three attributes for one region. Through the pie chart, you can discover the number
+          distribution regards three attributes in different Australia regions.</p>
+      </div>
     </div>
-  </div>
 
   </div>
   <div class="pure-g">
-    <div class="pure-u-1-1 final_world">
-        <p>The visualisation is created by <a href="https://github.com/rabbiTANG916/Ass2"
-                target="_blank">Wei Tang</a>.
-            The datasource is <a
-                href="https://www.kaggle.com/imdevskp/corona-virus-report"
-                target=" _blank">from Kaggle</href>
-                .</p>
+    <div class="pure-u-1-1 final_word">
+      <p style="font-style: italic; font-family: 'Times New Roman', Times, serif;">The visualisation is created by <a href="https://github.com/rabbiTANG916/Ass2" target="_blank">Wei Tang</a>.
+        The datasource is <a href="https://www.kaggle.com/imdevskp/corona-virus-report" target=" _blank">from Kaggle
+          </href>
+          .</p>
     </div>
-</div>
+  </div>
   <!-- end page -->
 
 
